--- a/builder/profile/MacOS/webox/install
+++ b/builder/profile/MacOS/webox/install
@@ -12,5 +12,5 @@ fi
 
 if [ `cat /var/lib/webox/version` -lt $WBX_VERSION ]; then
     echo $WBX_VERSION > /var/lib/webox/version
-    wbx_fix_install
+    wbx_fix_install "$WBX_APPS"
 fi
